API: GitHub Rate Limits and functions for pront and memory

--- a/config/default.conf
+++ b/config/default.conf
@@ -10,10 +10,6 @@ server {
 
     rewrite ^/(.*)/$ /$1 permanent; 
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -23,5 +19,10 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_buffering off;
+    }
+
+    location ~* ^.+\.(jpg|jpeg|gif|png|bmp|ico|css|js|swf|lrc)$ {
+      access_log   off;
+      expires      30d;
     }
 }
